--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,9 +4,9 @@
 
 <script>
     function editprofile(id) {
-        let username = $("#nama").val();
-        let kelamin = $("input[name='flexRadioDefault']:checked").val(); // Perbaikan pengambilan radio button
-        let tgl_lahir = $("#tgl_lahir").val();
+        let name = $("#name").val(); 
+        let username = $("#username").val();
+        let email = $("#email").val();
         let alamat = $("#alamat").val();
         let no_telepon = $("#no_telepon").val();
         let foto_profil = $('#foto_profil').prop("files")[0];
@@ -15,9 +15,9 @@
         let formData = new FormData();
 
         formData.append('id', id);
+        formData.append('name', name);
         formData.append('username', username);
-        formData.append('kelamin', kelamin);
-        formData.append('tgl_lahir', tgl_lahir);
+        formData.append('email', email);
         formData.append('alamat', alamat);
         formData.append('no_telepon', no_telepon);
         formData.append('foto_profil', foto_profil); 
@@ -203,32 +203,16 @@
                         </div>
                         <div class="col-12 col-sm-8">
                                 <div class="form-group">
-                                    <input type="text" class="form-control form-control-user" name="username" id="nama"
-                                        placeholder="Ujang jamaludin" value="{{ user.username }}" required>
-                                </div>
-                                <div class="form-group mb-3">
-                                    <div class="row ms-2">
-                                        <div class="col-12 col-sm-4">
-                                            <input class="form-check-input custom-checkbox" type="radio" name="flexRadioDefault"
-                                                id="flexRadioDefault1" value="Laki-laki" 
-                                                {% if user.kelamin == 'Laki-laki' or user.kelamin == 'laki-laki' %}checked{% endif %}>
-                                            <label class="form-check-label" for="flexRadioDefault1">
-                                                Laki-laki
-                                            </label>
-                                        </div>
-                                        <div class="col">
-                                            <input class="form-check-input custom-checkbox" type="radio" name="flexRadioDefault"
-                                                id="flexRadioDefault2" value="Perempuan" 
-                                                {% if user.kelamin == 'Perempuan' or user.kelamin == 'perempuan' %}checked{% endif %}>
-                                            <label class="form-check-label" for="flexRadioDefault2">
-                                                Perempuan
-                                            </label>
-                                        </div>
-                                    </div>
+                                    <input type="text" class="form-control form-control-user" name="name" id="name"
+                                        placeholder="Ujang jamaludin" value="{{ user.name }}" required>
                                 </div>
                                 <div class="form-group">
-                                    <input type="date" class="form-control form-control-user" name="tgl_lahir" id="tgl_lahir"
-                                        value="{{ user.tgl_lahir }}" required>
+                                    <input type="text" class="form-control form-control-user" name="username" id="username"
+                                        placeholder="Ujang jamaludin" value="{{ user.username }}" required>
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control form-control-user" name="username" id="email"
+                                        placeholder="Ujang jamaludin" value="{{ user.email }}" required>
                                 </div>
                                 <div class="form-group">
                                     <input type="text" class="form-control form-control-user" name="alamat" id="alamat"
