--- a/templates/main.html
+++ b/templates/main.html
@@ -8,56 +8,256 @@
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <title>{% block title %}{% endblock %}</title>
+
+    <!-- icon -->
+    <link href="{{ url_for('static', filename='vendor/fontawesome-free/css/all.min.css') }}" rel="stylesheet" type="text/css">
+
+    <!-- Animasi -->
+    <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
+    <style>
+      .text-custom{
+        color: #f9d71c;
+      }
+    </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/">Home</a>
-            </li>
-            {% if 'username' in session %}
-            <li class="nav-item">
-                <a class="nav-link" href="/dashboard">dashboard</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="/logout">logout</a>
-            </li>
-            {% else %}
-            <li class="nav-item">
-              <a class="nav-link" href="/login">login</a>
-            </li>
-            {% endif %}
-            <li class="nav-item">
-              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
+
+    <!-- HEADER -->
+    <header>
+      <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand d-flex align-items-center" href="#">
+            <img src="{{ url_for('static', filename='img/asset/logo.png') }}" 
+                 alt="Logo" 
+                 width="50" 
+                 height="50" 
+                 class="me-2">
+            <span class="fw-bold text-custom">Forty Seven Laundry</span>
+          </a>
+          
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item">
+                <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link {% if request.path == '/promo' %}active{% endif %}" href="/promo">Promo</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link {% if request.path == '/layanan' %}active{% endif %}" href="/layanan">Layanan</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link {% if request.path == '/about' %}active{% endif %}" href="/about">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link {% if request.path == '/contact' %}active{% endif %}" href="/contact">Contact</a>
+              </li>              
+              {% if 'username' in session %}
+              <li class="nav-item dropdown">
+                <a 
+                    class="nav-link dropdown-toggle d-flex align-items-center" 
+                    href="#" 
+                    id="navbarDropdown" 
+                    role="button" 
+                    data-bs-toggle="dropdown" 
+                    aria-expanded="false"
+                >
+                    {% if user.foto_profil %}
+                    <img 
+                        class="img-profile rounded-circle" 
+                        width="30" 
+                        height="30" 
+                        src="{{ url_for('static', filename='img/profile/' + user.foto_profil) }}"
+                        alt="User Profile Picture"
+                    >
+                    {% else %}
+                    <img 
+                        class="img-profile rounded-circle" 
+                        width="30" 
+                        height="30" 
+                        src="{{ url_for('static', filename='img/undraw_profile.svg') }}"
+                        alt="Default Profile Picture"
+                    >
+                    {% endif %}
+                    <span class="ms-2">{{ session['username'] }}</span>
+                </a>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                  {% if session.get('role') == '1' %}
+                    <li>
+                        <a class="dropdown-item" href="/dashboard">
+                          <i class="fas fa-tachometer-alt"></i>  Dashboard
+                        </a>
+                    </li>
+                  {% else %}
+                    <li>
+                        <a class="dropdown-item" href="/dashboard">
+                          <i class="far fa-user-circle"></i> Profile
+                        </a>
+                    </li> 
+                  {% endif %}
+                    <li>
+                        <a class="dropdown-item" href="/logout">
+                          <i class="fas fa-sign-out-alt"></i> Logout
+                        </a>
+                    </li>
+                </ul>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="/login">login</a>
+              </li>
+              {% endif %}
+            </ul>
+          </div>
         </div>
+      </nav>
+
+      <div class="container text-center">
+        {% block header %}{% endblock %}
       </div>
-    </nav>
+    </header>
+
     {% block content %} {% endblock %}
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-      crossorigin="anonymous"></script>
+    <!-- SLOGAN -->
+    <section id="slogan" class="text-center">
+      <div class="container">
+        <h2>Bersih, Rapih, Terpercaya</h2>
+        <p>Kami hadir sebagai solusi untuk menjaga kebersihan dan kenyamanan Anda. Dengan perawatan yang teliti, pakaian akan tetap segar, bersih, dan nyaman dipakai, seolah selalu baru setiap kali dikenakan</p>
+        <a href="/contact" class="btn btn-warning">Hubungi Kami</a>
+      </div>
+    </section>
+
+    <!-- Garis pembatas -->
+    <hr class="section-divider" />
+
+    <!-- FOOTER -->
+    <footer class="footer">
+      <div class="footer-content bg-white py-4">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <h5>Kontak Kami:</h5>
+              {% if contact %}
+              <p>{{ profile.namaPerusahaan | upper }}</p>
+              <p>Alamat: {{ contact.alamat }}</p>
+              <p>Telepon: {{ contact.nomor }}</p>
+              <p>Email: {{ contact.email }}</p>
+              {% else %}
+              <p>Tidak ada data</p>
+              {% endif %}
+            </div>
+
+            <div class="col-md-4">
+              <h5>Buka Setiap Hari:</h5>
+              {% if contact %}
+                <p>{{ contact.hari_buka.dari }} – {{ contact.hari_buka.sampai }}: {{ contact.jam_buka.dari }}-{{ contact.jam_buka.sampai }}</p>
+              {% else %}
+                <p>Tidak ada data</p>
+              {% endif %}
+            </div>
+
+            <div class="col-md-2">
+              <h5>Our Company</h5>
+              <ul class="list-unstyled">
+                <li><a href="/" class="text-dark text-decoration-none">Home</a></li>
+                <li><a href="/promo" class="text-dark text-decoration-none">Promo</a></li>
+                <li><a href="/layanan" class="text-dark text-decoration-none">Layanan</a></li>
+                <li><a href="/contact" class="text-dark text-decoration-none">Contact</a></li>
+              </ul>
+            </div>
+
+            <div class="col-md-2 text-center">
+              <h5>Follow Us:</h5>
+              <a href="{% if contact.social_media.instagram %}{{ contact.social_media.instagram }}{% else %}#{% endif %}" target="_blank"><img src="/static/img/asset/instagram.png" alt="Instagram" width="30"/></a>
+              <a href="{% if contact.social_media.tiktok %}{{ contact.social_media.tiktok }}{% else %}#{% endif %}" target="_blank"><img src="/static/img/asset/tiktok.png" alt="TikTok" width="30"/></a>
+              <a href="{% if contact.nomor %}https://wa.me/62{{ contact.nomor }}?text=Halo%20Forty%20Seven%20Laundry,%20saya%20mau%20pesan%20layanan{% else %}#{% endif %}" target="_blank"><img src="/static/img/asset/whatsapp.png" alt="Whatsapp" width="30"/></a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="footer-copyright text-white py-2">
+        <div class="container text-center">
+          <p>Copyright © 2023 Laundry Forty Seven PKU | Powered by Ryzen</p>
+        </div>
+      </div>
+    </footer>
+
+    <!-- Modal -->
+    <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="responseModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body row">
+              <div class="col-12 d-flex justify-content-center">
+                  <dotlottie-player src="https://lottie.host/2a5138ae-5a9f-41cf-ba78-b51c7d14accd/3xYrsCV0Ya.json" background="transparent" speed="1" style="width: 200px; height: 200px" direction="1" playMode="normal" loop autoplay></dotlottie-player>
+              </div>
+              <div class="col text-center">
+                  <!-- Pesan dari server -->
+                  <p id="modalMessage"></p>
+              </div>
+          </div>
+        </div>
+      </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="errorModal" tabindex="-1" aria-labelledby="responseModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body row">
+              <div class="col-12 d-flex justify-content-center">
+                  <dotlottie-player src="https://lottie.host/e2844399-9b7f-445f-b1cb-a0c276a52d3c/8C2joS4JAA.json" background="transparent" speed="1" style="width: 200px; height: 200px" direction="1" playMode="normal" loop autoplay></dotlottie-player>
+              </div>
+              <div class="col text-center">
+                  <!-- Pesan dari server -->
+                  <p id="modalMessageE"></p>
+              </div>
+          </div>
+        </div>
+      </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="warningModal" tabindex="-1" aria-labelledby="responseModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body row">
+              <div class="col-12 d-flex justify-content-center">
+                  <dotlottie-player src="https://lottie.host/a9965936-0f43-4150-8d94-88b109d3b53a/aXmXxc8G1g.json" background="transparent" speed="1" style="width: 200px; height: 200px" direction="1" playMode="normal" loop autoplay></dotlottie-player>
+              </div>
+              <div class="col text-center">
+                  <!-- Pesan dari server -->
+                  <p id="modalMessageW"></p>
+              </div>
+          </div>
+        </div>
+      </div>
+  </div>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const navbar = document.getElementById("navbar");
+        window.addEventListener("scroll", function () {
+          if (window.scrollY > 50) {
+            navbar.classList.add("scrolled");
+          } else {
+            navbar.classList.remove("scrolled");
+          }
+        });
+      });
+    </script>
+    
+
+    <!-- Bootstrap core JavaScript-->
+    <script src="{{ url_for('static', filename='vendor/jquery/jquery.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
   </body>
 </html>
