--- a/templates/main_admin.html
+++ b/templates/main_admin.html
@@ -76,7 +76,7 @@
         <ul class="navbar-nav sidebar sidebar-light accordion" style="color: #FBCE19;" id="accordionSidebar">
 
             <!-- Sidebar - Brand -->
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/">
                 <div class="sidebar-brand-icon ">
                     <img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo" width="50">
                 </div>
