--- a/templates/home.html
+++ b/templates/home.html
@@ -44,7 +44,7 @@
 
 <script>
   function tambahrating(id){
-        let name = $("#name").val();
+        let name = $("#nama").val();
         let review = $("#review").val();
         let rating = $("#rating").val();
 
@@ -394,7 +394,7 @@
                 <div class="modal-body">
                   <div class="form-group mb-3">
                       <label for="name">Nama</label>
-                      <input type="text" class="form-control" id="name" name="name" placeholder="Masukkan nama" value="{{ rating_status.name }}" disabled required>
+                      <input type="text" class="form-control" id="nama" name="name" placeholder="Masukkan nama" value="{{ rating_status.name }}" disabled required>
                   </div>
                   <div class="form-group mb-3">
                       <label for="review">Review</label>
