--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Forty Seven Laundry</title>
+    <link href="{{ url_for('static', filename='img/asset/logo.png') }}" rel="icon" />
     <style>
       
         body {
@@ -26,24 +27,25 @@
             display: flex;
             align-items: center;
             justify-content: left;
-            width: 100%;
+            width: 90%;
             padding: 20px;
         }
 
         .logo img {
-            width: 100px;
-            margin-right: 15px;
+            width: 3rem;
+            margin-left: 15px;
         }
 
         .header-title {
-            font-size: 32px;
+            margin-left: 10px;
+            font-size: 20px;
             font-weight: bold;
             color: #F7C740;
         }
 
         .container {
             width: 100%;
-            max-width: 600px;
+            max-width: 500px;
             background-color: white;
             border-radius: 100px 0 100px 0;
             padding: 40px 30px;
@@ -118,13 +120,11 @@
         }
 
         .form-input input {
-            width: 100%;
-            padding: 15px;
-            border: 1px solid #ccc;
-            border-radius: 30px;
-            outline: none;
-            font-size: 16px;
-            box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.05);
+            width: 93%;
+            padding: 10px 15px;
+            font-size: 14px;
+            border: 1px solid #CCCCCC;
+            border-radius: 8px;
         }
 
         .form-input input::placeholder {
@@ -297,10 +297,6 @@
             </div>
             <div class="form-input">
                 <input type="password" placeholder="Your Password" id="password" name="password" required>
-            </div>
-            
-            <div class="forgot-password">
-                <a href="#">Forgot your password?</a>
             </div>
             
             <button type="submit" class="btn-login">Login</button>
