--- a/templates/main_admin.html
+++ b/templates/main_admin.html
@@ -11,7 +11,7 @@
 
     <title>FSL - {{ title }}</title>
 
-    <link href="{{ url_for('static', filename='img/logo.png') }}" rel="icon" />
+    <link href="{{ url_for('static', filename='img/asset/logo.png') }}" rel="icon" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
