--- a/templates/register.html
+++ b/templates/register.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register - Forty Seven Laundry</title>
 
+    <link href="{{ url_for('static', filename='img/asset/logo.png') }}" rel="icon" />
+
     <script src="https://unpkg.com/@dotlottie/player-component@2.7.12/dist/dotlottie-player.mjs" type="module"></script>
 
     <link
@@ -44,12 +46,13 @@
         }
 
         .logo img {
-            width: 100px;
-            margin-right: 15px;
+            width: 3rem;
+            margin-left: 15px;
         }
 
         .header-title {
-            font-size: 29px;
+            margin-left: 10px;
+            font-size: 20px;
             font-weight: bold;
             color: #F7C740;
         }
