--- a/templates/home.html
+++ b/templates/home.html
@@ -419,7 +419,7 @@
                 <div class="modal-body">
                   <div class="form-group mb-3">
                       <label for="name">Nama</label>
-                      <input type="text" class="form-control" id="name" name="name" placeholder="Masukkan nama" value="{{ user.name }}" disabled required>
+                      <input type="text" class="form-control" id="nama" name="name" placeholder="Masukkan nama" value="{{ user.name }}" disabled required>
                   </div>
                   <div class="form-group mb-3">
                       <label for="review">Review</label>
