--- a/templates/main.html
+++ b/templates/main.html
@@ -234,7 +234,7 @@
     {% block content %} {% endblock %}
 
     <!-- SLOGAN -->
-    <section id="slogan" class="text-center">
+    <section id="slogan" class="text-center mt-5">
       <div class="container">
         <h2>Bersih, Rapih, Terpercaya</h2>
         <p>Kami hadir sebagai solusi untuk menjaga kebersihan dan kenyamanan Anda. Dengan perawatan yang teliti, pakaian akan tetap segar, bersih, dan nyaman dipakai, seolah selalu baru setiap kali dikenakan</p>
