--- a/templates/home.html
+++ b/templates/home.html
@@ -186,7 +186,7 @@
           <h2>Promo</h2>
           <div class="row">
             {% for pro in promo %}
-            <div class="col-md-4">
+            <div class="col-md-4" data-toggle="modal" data-target="#datailPromoModal{{ pro._id }}">
               <div class="card">
                 {% if pro.foto %}
                 <img class="card-img-to" src="{{ url_for('static', filename='img/promo/' + pro.foto) }}">
@@ -196,7 +196,7 @@
                 <div class="card-body">
                     <h4 class="text-center">{{ pro.judul }}</h4>
                     <p class="text-center" style="color: #fbce19;">Berlaku sampai : {{ pro.tanggal_berakhir | format_date }}</p>
-                    <p>{{ pro.deskripsi | safe }}</p>
+                    <p>{{ pro.deskripsi | limit_taxt(10) | safe }}</p>
                     <div class="text-center">
                         {% if contact.nomor %}
                             <a href="https://wa.me/62{{ contact.nomor }}?text=Halo%20Forty%20Seven%20Laundry,%20saya%20mau%20pesan%20layanan" class="btn btn-secondary text">Pesan Sekarang</a>
@@ -208,6 +208,41 @@
                 </div>
               </div>
             </div>
+            <!-- Modal -->
+            <div class="modal fade" id="datailPromoModal{{ pro._id }}" tabindex="-1" aria-labelledby="responseModalLabel" aria-hidden="true">
+              <div class="modal-dialog modal-lg modal-dialog-centered modal-dialog-scrollable">
+                <div class="modal-content">
+                  <div class="modal-body row">
+                      <div class="col-12 col-sm-4">
+                          {% if pro.foto %}
+                          <img class="img-fluid" src="{{ url_for('static', filename='img/promo/' + pro.foto) }}">
+                          {% else %}
+                          <img class="img-fluid" src="{{ url_for('static', filename='img/undraw_profile.svg') }}">
+                          {% endif %}
+                      </div>
+                      <div class="col">
+                          <div class="row mt-3 ms-3">
+                              <div class="col-10">
+                                  <h4 class="">{{ pro.judul }}</h4>
+                                  <p class="" style="color: #fbce19;">Berlaku sampai : {{ pro.tanggal_berakhir | format_date }}</p>
+                              </div>
+                              <div class="col">
+                                  <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
+                              </div>
+                          </div>
+                          <p>{{ pro.deskripsi | remove_html | limit_taxt(10) }}</p>
+                        <div class="">
+                            {% if contact.nomor %}
+                                <a href="https://wa.me/62{{ contact.nomor }}?text=Halo%20Forty%20Seven%20Laundry,%20saya%20mau%20pesan%20layanan" target="_blank" class="btn btn-secondary text ms-3">Pesan Sekarang</a>
+                            {% else %}
+                                <a href="https://wa.me/6282173515200?text=Halo%20Forty%20Seven%20Laundry,%20saya%20mau%20pesan%20layanan" target="_blank" class="btn btn-secondary">Pesan Sekarang</a>
+                            {% endif %}
+                        </div>
+                      </div>
+                  </div>
+                </div>
+              </div>
+          </div>
             {% endfor %}
           </div>
         </div>
@@ -225,14 +260,14 @@
       <section id="services">
         <h2>Layanan Laundry Forty Seven</h2>
         <div class="service-items">
-          <img src="/static/img/asset/sprei.jpg" alt="Sprei" />
-          <img src="/static/img/asset/boneka.jpg" alt="Boneka" />
-          <img src="/static/img/asset/handuk.jpg" alt="Handuk" />
-          <img src="/static/img/asset/sarungbantal.jpg" alt="Sarung Bantal" />
-          <img src="/static/img/asset/tas.jpg" alt="Tas" />
-          <img src="/static/img/asset/hordeng.jpg" alt="Tas" />
-          <img src="/static/img/asset/sepatu.jpg" alt="Tas" />
-          <img src="/static/img/asset/stroller.jpg" alt="Tas" />
+          <img src="/static/img/asset/1.jpg" alt="1" />
+          <img src="/static/img/asset/2.jpg" alt="2" />
+          <img src="/static/img/asset/3.jpg" alt="3" />
+          <img src="/static/img/asset/4.jpg" alt="4" />
+          <img src="/static/img/asset/5.jpg" alt="5" />
+          <img src="/static/img/asset/6.jpg" alt="6" />
+          <img src="/static/img/asset/7.jpg" alt="7" />
+          <img src="/static/img/asset/8.jpg" alt="8" />
         </div>
       </section>
   
